# userlib

./: README.md  settings.gradle
app/: build.gradle  sdfdfge.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/core/include/: Logger.h  Macros.h  Utils.h  loader.h
app/src/main/cpp/core/include/Substrate/: SymbolFinder.cpp
app/src/main/cpp/utilities/: CrashDump.cpp
app/src/main/java/com/cipher/userlib/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
